# AI_solo_coder_task_A_112

./: CMakeLists.txt
backend/: CMakeLists.txt
frontend/: index.html
frontend/js/: scene3d.js
include/: common.h
opc_simulator/src/: simulator.cpp
